--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "vue": "^3.5.17"
   },
   "devDependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.46.2",
     "@vitejs/plugin-vue": "^6.0.0",
+    "gh-pages": "^6.3.0",
     "vite": "^7.0.4"
   }
 }
